Add 2021 eurostat data to git for now
This should be removed again when the data is added to the Zenodo
dataset and downloaded automatically.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@ gurobi.log
 /data/retro/tabula-calculator-calcsetbuilding.csv
 /data/nuts*
 
+# Add exception for 2021 eurostat data until added to Zenodo
+!/data/eurostat-energy_balances-june_2021_edition
+
 *.org
 
 *.nc
