Add technology-data as git submodule
One reason to add techonology-data _within_ the pypsa-eur-sec
directory is that snakemake doesn't like paths involing ".." within
snakemake modules; they don't get prefixed properly.

--- a/config.default.yaml
+++ b/config.default.yaml
@@ -6,7 +6,7 @@ retrieve_sector_databundle: true
 
 results_dir: results/
 summary_dir: results
-costs_dir: ../technology-data/outputs/
+costs_dir: technology-data/outputs/
 run: your-run-name  # use this to keep track of runs with different settings
 foresight: overnight # options are overnight, myopic, perfect (perfect is not yet implemented)
 # if you use myopic or perfect foresight, set the investment years in "planning_horizons" below
