--- a/envs/environment.yaml
+++ b/envs/environment.yaml
@@ -10,13 +10,13 @@ dependencies:
 - python>=3.8
 - pip
 
-- pypsa>=0.21.2
+- pypsa==0.22.1
 - atlite>=0.2.9
 - dask
 
   # Dependencies of the workflow itself
 - xlrd
-- openpyxl
+- openpyxl<3.1|>=3.2  # Exclude the 3.1 series due to https://foss.heptapod.net/openpyxl/openpyxl/-/issues/1963
 - pycountry
 - seaborn
 - snakemake-minimal
