--- a/config.default.yaml
+++ b/config.default.yaml
@@ -63,7 +63,7 @@ snapshots:
   # arguments to pd.date_range
   start: "2013-01-01"
   end: "2014-01-01"
-  closed: left # end is not inclusive
+  inclusive: "left" # end is not inclusive
 
 atlite:
   cutout: europe-era5-{weather_year}
